<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".activities.Question3Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagePlaceholder"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_img"
            android:contentDescription="@string/some_trivia_image" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/questionText" />

        <RadioGroup
            android:id="@+id/rgAnswers"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/answerOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/somePlaceholder" />

            <RadioButton
                android:id="@+id/answerTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/somePlaceholder" />

            <RadioButton
                android:id="@+id/answerThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/somePlaceholder" />

            <RadioButton
                android:id="@+id/answerFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/somePlaceholder" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_back"
            android:text="@string/backButton"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawableRight="@drawable/ic_next"
            android:text="@string/nextButton"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>